# lacrimosa

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  WHITEPAPER.md  config.example.yaml
.claude/: settings.json
macos/: install-daemons.sh
memory/: DEPLOY.md  MEMORY.md  deploy.sh  feedback_agent_teams_vs_subagents.md  feedback_browser_qa_tools.md  feedback_ceremony_auto_actions.md  feedback_codex_backend_adapter.md  feedback_commit_engine_changes.md  feedback_daily_cap_counting.md  feedback_fix_findings_regardless_of_origin.md  feedback_fix_retest_mandatory.md  feedback_high_context_model_selection.md  feedback_lacrimosa_never_idle.md  feedback_lacrimosa_self_improvement.md  feedback_lacrimosa_v3_architecture.md  feedback_learning_events_processing.md  feedback_qa_agent_screenshot_validation.md  feedback_specialist_restart_logic.md  feedback_sprint_focus_distillation.md  feedback_staging_verification_mandatory.md  feedback_test_plan_specificity.md  feedback_visual_qa_loop.md  feedback_visual_qa_release_gate.md  feedback_worker_stop_signals.md  feedback_worktree_isolation_mandatory.md
schema-mcp/: LICENSE  README.md  __init__.py  __main__.py  pyproject.toml  requirements.txt  server.py
schema-mcp/models/: __init__.py  inputs.py
schema-mcp/services/: __init__.py  embedding_service.py
schema-mcp/tests/: __init__.py  conftest.py  test_ki_tools.py  test_schema_index.py  test_schema_reader.py  test_schema_search.py  test_schema_writer.py
schema-mcp/tools/: __init__.py  ki_tools.py  schema_index.py  schema_reader.py  schema_search.py  schema_writer.py
schema-mcp/utils/: __init__.py  errors.py
schemas/: KI_GOTCHAS_SCHEMA.md  KI_INFRA_SCHEMA.md  SCHEMA_INDEX.md
scripts/: lacrimosa_agent_runner.py  lacrimosa_ceremonies.py  lacrimosa_ceremony_runners.py  lacrimosa_conductor.py  lacrimosa_config.py  lacrimosa_dashboard.py  lacrimosa_dashboard_validator.py  lacrimosa_external_sensing.py  lacrimosa_feedback_reader.py  lacrimosa_intake.py  lacrimosa_learnings.py  lacrimosa_linear.py  lacrimosa_linear_dashboard.py  lacrimosa_merge_graph.py  lacrimosa_metrics.py  lacrimosa_pipeline.py  lacrimosa_scoring.py  lacrimosa_self_monitor.py  lacrimosa_sensors.py  lacrimosa_signals.py  lacrimosa_specialist_bootstrap.py  lacrimosa_state.py  lacrimosa_state_sqlite.py  (+6 more)
(+105 files in other folders)
